@@ -24,6 +24,8 @@
     <li class="fix">Fixed plugin loading on linux</li>
     <li class="fix">Fixed dock widget positions save/load</li>
     <li class="fix">Fixed main window title</li>
+    <li class="fix">Fixed problems with opening already opened files <p class="comment">Now if file already opened, then it makes tab active</p></li>
+    <li class="change">Change license to MIT</li>
 
     <p class="header">SCg-editor</p>
     <li class="add">Added load/save of content state</li>
@@ -38,6 +40,7 @@
     
     <p class="header">SCs editor</p>
     <li class="add">Added support of scs 0.2.0 standard</li>
+    <li class="add">Added new line into the end of file<p class="comment">Less lines changes in diff's</p></li>
     <li class="fix">Fixed default encoding to utf-8</li>
     
 </ul>
